<resources>
    <string name="app_name">IH13A33426_MyLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">視聴映画管理アプリ(仮</string>
    <string name="mainButton1">新規映画追加</string>
    <string name="mainButton2">視聴済み映画参照</string>
    <string name="title_activity_add_new">addNew</string>
    <string name="addText1">映画の詳細を入力してください</string>
    <string name="addText2">タイトル</string>
    <string name="addText3">ジャンル</string>
    <string name="addText4">主演</string>
    <string name="addText5">評価</string>
    <string name="addText6">感想</string>
    <string name="addText7">追加</string>
    <string name="title_activity_show_list">showList</string>
    <string name="title_activity_update">Update</string>
    <string name="DEL">削除</string>
    <string name="UPDATE">更新</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_side">Side</string>
    <string name="search">ジャンル検索</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="change">映画の情報を変更できます</string>
    <string name="date2">追加日/更新日</string>
    <string name="title_activity_result">Result</string>
    <string name="genreText">検索したいジャンルを入力してください</string>
    <string name="home">ホーム</string>

</resources>
