<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="jp.ac.hal.ths30470.addNew"
    android:weightSum="1"
    android:background="@mipmap/bg1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText1"
            android:id="@+id/textView"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:id="@+id/editText"
            android:layout_below="@+id/textView3"
            android:hint="@string/addText2"
            android:layout_alignStart="@+id/textView4"
            android:textColor="#ffffffff"
            android:textColorHint="#ffd1d1d1"
            android:textColorHighlight="#ffffffff"
            android:background="@drawable/radius"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/editText2"
            android:hint="@string/addText3"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:textColorHint="#FFD1D1D1"
            android:textColor="#ffffffff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/radius"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/editText3"
            android:layout_below="@+id/textView5"
            android:hint="@string/addText4"
            android:layout_alignStart="@+id/textView5"
            android:textColorHint="#FFD1D1D1"
            android:textIsSelectable="false"
            android:textColor="#ffffffff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/radius"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/addText5"
            android:id="@+id/textView6"
            android:layout_below="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:background="@drawable/radius"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_weight="0.15">

        <ImageButton
            android:layout_width="94dp"
            android:layout_height="45dp"
            android:id="@+id/imageButton3"
            android:src="@mipmap/submit"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>
