<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="jp.ac.hal.ths30470.Update"
    android:weightSum="1"
    android:background="@mipmap/bg1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/textView3"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText2"
            android:id="@+id/textView4"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:id="@+id/editText4"
                android:hint="@string/addText2"
                android:textColor="#ffffffff"
                android:textColorHint="#ffd1d1d1"
                android:textColorHighlight="#ffffffff"
                android:background="@drawable/radius"
                android:inputType="text"/>

        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText3"
            android:id="@+id/textView7"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/editText5"
            android:hint="@string/addText3"
            android:textColorHint="#FFD1D1D1"
            android:textColor="#ffffffff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/radius"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText4"
            android:id="@+id/textView8"
            android:textColor="#ffffffff" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/editText6"
            android:hint="@string/addText4"
            android:textColorHint="#FFD1D1D1"
            android:textIsSelectable="false"
            android:textColor="#ffffffff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/radius"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/addText5"
            android:id="@+id/textView6"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar2"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:background="@drawable/radius"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date2"
            android:id="@+id/textView5"
            android:textColor="#ffffffff"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/editText6"
            android:layout_marginBottom="44dp"
            android:textColor="#ffffffff"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_weight="0.15">

        <ImageButton
            android:layout_width="112dp"
            android:layout_height="43dp"
            android:id="@+id/imageButton4"
            android:src="@mipmap/delete"
            android:layout_marginRight="30dp" />

        <ImageButton
            android:layout_width="113dp"
            android:layout_height="44dp"
            android:id="@+id/imageButton5"
            android:src="@mipmap/update" />
    </LinearLayout>

</LinearLayout>
